--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,8 @@
     "cors": "^2.8.6",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "mongodb": "^7.1.0",
+    "mongoose": "^9.1.6",
     "react-router-dom": "^7.13.0",
     "socket.io": "^4.8.3"
   },
